--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
   "name": "ar-zoo-exhibit",
   "version": "1.0.0",
-  "description": "",
+  "description": "An Augmented Reality Zoo and Museum Exhibit prototype to raise awareness about endangered species.",
   "scripts": {
-    "start": "parcel public/index.html --open"
+    "start": "parcel public/index.html --open",
+    "build": "parcel build public/index.html"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "@google/model-viewer": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "parcel": "^2.8.0"
-  }
+    "parcel": "^2.10.0"
+  },
+  "keywords": [
+    "AR",
+    "Augmented Reality",
+    "Zoo",
+    "Museum",
+    "React",
+    "model-viewer"
+  ],
+  "author": "William Borges",
+  "license": "MIT"
 }
